--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "verifalia/sdk",
+	"version": "1.1",
 	"description": "Verifalia REST API - PHP SDK and helper library for email validation",
 	"homepage": "http://verifalia.com",
 	"keywords": ["verifalia", "email", "validation", "verification", "free", "service", "saas", "list", "hygiene", "cleaning", "mx", "smtp", "mailbox", "scrub"],
