- Added support for importing and checking mailing list files in multiple file formats, including CSV, TSV, Excel (.xls and .xlsx) and plain text files (.txt) - Added support for exporting completed email verification entries in multiple file formats, including CSV, TSV and Excel (.xls and .xlsx) - Extended support for GuzzleHTTP to version 7.* - Fixed an issue with the parsing of the waiting time hint while waiting for job completion - Improved documentation

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "mx",
     "smtp",
     "mailbox",
-    "scrub"
+    "scrub",
+    "email checker"
   ],
   "authors": [
     {
@@ -44,8 +45,8 @@
     }
   },
   "require": {
-    "php": ">=7.0",
-    "guzzlehttp/guzzle": "~6.0",
+    "php": ">=7",
+    "guzzlehttp/guzzle": "^6|^7",
     "ext-json": "*"
   },
   "support": {
